--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon app.js",
+    "docs": "apidoc -i ./models -e node_modules  -o doc/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apidoc": "^0.29.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^1.6.0"
+    "sequelize": "^6.7.0",
+    "sequelize-cli": "^5.0.0"
+  },
+  "apidoc": {},
+  "devDependencies": {
+    "@types/apidoc": "^0.22.3"
   }
 }
